# VariableRenamerCPlusPlus

./: CMakeLists.txt  LICENSE  README.md  filelinesmap.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Stylesheets/: dark_mode.qss  dark_mode_modern.qss  dark_mode_v2.qss
